# PulseSDK

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
cli/: .gitkeep  CMakeLists.txt  Cargo.toml
cli/assets/: pulse.entitlements
cli/src/: builder.rs  checkoffsets.rs  cli.rs  installer.rs  lib.rs  logs.rs  main.rs  manifest.rs  native_compiler.rs  publisher.rs  scaffold.rs  submit.rs  upload.rs
cli/src/bindings/: catalog.rs  contribution.rs  crosscheck.rs  generator.rs  linter.rs  mod.rs  prologue.rs  provenance.rs  validation.rs
cli/src/doctor/: checks.rs  mod.rs  report.rs
cli/src/extract/: demangle.rs  elf.rs  elf_vtable.rs  matcher.rs  mod.rs  prologue.rs  provenance.rs  report.rs  rtti.rs  vtable.rs  writer.rs
cli/src/extract/binary/: mod.rs
cli/src/siggen/: mask.rs  mod.rs  scan.rs  signature.rs
cli/src/surface/: compiler.rs  cppgen.rs  ir.rs  linter.rs  manifest.rs  mod.rs  validation.rs
cli/src/tui/: banner.rs  menu.rs  mod.rs
cli/tests/: bindings_provider_consumption.rs  bindings_scaling.rs  cli_behavior_test.rs  cli_compile_atomicity_prop.rs  cli_script_no_toolchain_prop.rs  cli_toolchain_unit.rs  installer_backup_completeness_prop.rs  installer_examples.rs  installer_rollback_prop.rs  installer_roundtrip_prop.rs  manifest_proptest.rs  surface_seed.rs
docs/: .gitkeep  STATUS.md  geode-parity.md  hooking-engine.md  phase-e-real-gd-verification.md  pulse-vs-geode-hook-example.md  pulse-vs-geode.md  tooling-rationale.md
loader/: CMakeLists.txt  pulse_embedded_pbind.hpp.in
loader/bindings/: .gitkeep  binding_verifier.cpp  binding_verifier.hpp  bindings.hpp  embedded_bindings_provider.cpp  embedded_bindings_provider.hpp  online_bindings_provider.cpp  online_bindings_provider.hpp  pbind_format.cpp  pbind_format.hpp
loader/bootstrap/: .gitkeep  android_bootstrap.cpp  android_bootstrap.hpp  ios_bootstrap.cpp  ios_bootstrap.hpp  macos_bootstrap.cpp  macos_bootstrap.hpp  platform_bootstrap.hpp  windows_bootstrap.cpp  windows_bootstrap.hpp
loader/core/: centralized_loader.cpp  centralized_loader.hpp  loader.cpp  loader_core.cpp  loader_core.hpp  mod_registrar.cpp  mod_registrar.hpp  runtime_context.cpp  runtime_context.hpp  runtime_entry.cpp  version_detector.cpp  version_detector.hpp
loader/hooking/: .gitkeep  chain_dispatch_harness.hpp  crash_sentinel.cpp  crash_sentinel.hpp  dobby_backend.cpp  dobby_backend.hpp  fake_backend.hpp  head_thunk.cpp  head_thunk.hpp  head_thunk_arm64.S  head_thunk_x86_64.S  hook_backend.hpp  hook_chain.cpp  hook_chain.hpp  hook_chain_registry.cpp  hook_chain_registry.hpp  hook_engine.hpp  hook_gate.hpp  minhook_backend.cpp  minhook_backend.hpp  registry_grouping.cpp  registry_grouping.hpp  rollback_store.cpp  rollback_store.hpp  shadowhook_backend.cpp  shadowhook_backend.hpp
loader/include/pulse_loader/: loader.hpp  runtime_entry.h
loader/lifecycle/: .gitkeep  compatibility.cpp  compatibility.hpp  dependency_resolver.cpp  dependency_resolver.hpp  hook_ownership.cpp  hook_ownership.hpp  hot_reload.cpp  hot_reload.hpp  manifest.hpp  manifest_validation.hpp  mod_loader.cpp  mod_loader.hpp  mod_manager.cpp  mod_manager.hpp  mod_manager_ui.cpp  mod_manager_ui.hpp  mod_manifest_validator.cpp  mod_manifest_validator.hpp  module_loader.cpp  module_loader.hpp
loader/mvp/: demo_mod.cpp  demo_mod.hpp  menulayer_init_hook.cpp  menulayer_init_hook.hpp  mvp_loader.cpp  mvp_loader.hpp
loader/package/: install_gate.hpp  marketplace_signer.hpp  pulse_package.hpp  pulse_zip_reader.cpp  pulse_zip_reader.hpp
loader/sandbox/: sandbox.hpp
loader/scripting/: fake_script_engine.hpp  script_engine.hpp  scripting_runtime.hpp
loader/surface/: surface_provenance.cpp  surface_provenance.hpp  surface_report.cpp  surface_report.hpp  surface_resolver.cpp  surface_resolver.hpp
loader/telemetry/: crash_report.hpp
mod-index/: .gitkeep
sdk/: CMakeLists.txt  PulseConfig.cmake.in
sdk/async/: .gitkeep  task.hpp
sdk/compile-test/: surface_build_check.cpp
sdk/events/: .gitkeep  event_bus.hpp
sdk/fields/: .gitkeep
sdk/hooks/: .gitkeep
sdk/http/: .gitkeep  http.hpp
sdk/include/pulse/: async.hpp  events.hpp  fields.hpp  hooks.hpp  http.hpp  log.hpp  pulse.hpp  settings.hpp  settings_ui.hpp  storage.hpp  ui.hpp  ui_nodes.hpp  version.hpp
sdk/include/pulse/gd/: bindings.gen.hpp  hooks.gen.hpp  types.gen.hpp
sdk/log/: .gitkeep  log.hpp
sdk/settings/: .gitkeep  settings_ui.hpp
sdk/storage/: .gitkeep
sdk/ui/: .gitkeep  layout.hpp  node_id.hpp
tests/: CMakeLists.txt  android_bootstrap_test.cpp  binding_resolved_iff_verified_property_test.cpp  binding_verification_test.cpp  bindings_test.cpp  bootstrap_diagnostic_property_test.cpp  centralized_loader_test.cpp  crash_report_test.cpp  crash_sentinel_test.cpp  demo_log_order_test.cpp  demo_mod_test.cpp  dependency_resolver_test.cpp  diagnostic_ledger_test.cpp  eml_property10_entrypoint_invoked_once_test.cpp  eml_property11_unresolved_zero_hooks_diagnostic_test.cpp  eml_property12_fail_open_isolation_test.cpp  eml_property13_isolated_non_interference_test.cpp  eml_property14_init_reinit_failure_rollback_test.cpp  eml_property15_install_remove_byte_exact_roundtrip_test.cpp  eml_property16_enable_disable_enable_roundtrip_test.cpp  eml_property17_disallowed_transition_invariance_test.cpp  eml_property18_partial_install_rollback_test.cpp  eml_property20_hook_ownership_global_invariant_test.cpp  eml_property21_outcome_partition_test.cpp  eml_property22_diagnostic_closed_set_cause_test.cpp  eml_property23_entrypoint_unresolvable_isolation_test.cpp  eml_property24_module_loader_unavailable_byte_invariance_test.cpp  eml_property2_compatibility_exclusion_test.cpp  eml_property3_dedup_mod_id_test.cpp  eml_property4_discovery_first_level_isolation_test.cpp  eml_property5_validation_rejection_test.cpp  eml_property6_integrity_mutation_test.cpp  eml_property7_topological_transitive_load_order_test.cpp  eml_property8_dependency_exclusion_propagation_test.cpp  eml_property9_hook_ownership_attribution_test.cpp  event_bus_test.cpp  exact_pair_lookup_property_test.cpp  (+127 more)
(+14605 files in other folders)
